# genshin-birthday-calendar

./: .pdm-python  LICENSE  README.md  calendar.ics  pyproject.toml  run.py
.github/workflows/: update-calendar.yml
ical/: calendar.py  component.py  timezone.py
