[project]
name = "genshin-birthday-calendar"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Karako",email = "karakohear@gmail.com"},
]
dependencies = [
    "pydantic>=2.5.2",
    "orjson>=3.9.10",
    "httpx>=0.26.0",
    "ics>=0.7.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.12.0",
]
